MFC r334068 (phil):  Import libxo-0.9.0:   - Add xo_format_is_numeric() with improved logic to decide if format     strings are numeric, so json output quotes them   - Convert docs to sphinx/rst   - update tests

PR:		221676
Approved by:	re (marius)
Sponsored by:	The FreeBSD Foundation